Bug 333583 - Quick filter button ('More') is not (re)movable
Summary: Quick filter button ('More') is not (re)movable
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: UI (other bugs)
Version First Reported In: 4.13
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-04-18 14:13 UTC by Coacher
Modified: 2014-04-19 20:10 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.13.1
Sentry Crash Report:


Attachments
Quick filter button in Quick search bar (87.31 KB, image/png)
2014-04-18 14:19 UTC, Coacher
Details
Quick filter button fused into Kmail UI (Quick search bar disabled) (60.60 KB, image/png)
2014-04-18 14:25 UTC, Coacher
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Coacher 2014-04-18 14:13:16 UTC
Hello.

Since KDE SC 4.13 a button, labeled 'More', was added to quick search bar. However, even when this bar is not displayed the said button is present. Its presence breaks accustomed experience and eats up a lot of vertical space (for a single button).

Can you please make it movable or better removable?

Reproducible: Always
Comment 1 Coacher 2014-04-18 14:19:19 UTC
Created attachment 86151 [details]
Quick filter button in Quick search bar

Notice how this button is compact and tiny.
Comment 2 Coacher 2014-04-18 14:25:57 UTC
Created attachment 86152 [details]
Quick filter button fused into Kmail UI (Quick search bar disabled)

Notice how much space this small button eats up now. The placement is also horrible as it constantly meets the eye while its usability is not vital.
Comment 3 Laurent Montel 2014-04-18 15:33:55 UTC
Indeed a bug :)
I will fix it soon.
Comment 4 Laurent Montel 2014-04-18 17:37:45 UTC
Git commit 37f3637e9c8fbea5f23d245d77b58b35da88bb41 by Montel Laurent.
Committed on 18/04/2014 at 17:36.
Pushed by mlaurent into branch 'KDE/4.13'.

Bug 333583 - Quick filter button ('More') is not (re)movable

FIXED-IN: 4.13.1

M  +10   -3    messagelist/core/quicksearchline.cpp
M  +2    -0    messagelist/core/quicksearchline.h
M  +1    -3    messagelist/core/widgetbase.cpp
M  +49   -0    messagelist/tests/quicksearchlinetest.cpp
M  +2    -0    messagelist/tests/quicksearchlinetest.h

http://commits.kde.org/kdepim/37f3637e9c8fbea5f23d245d77b58b35da88bb41
Comment 5 Laurent Montel 2014-04-18 17:38:07 UTC
I fixed some others bugs associate too.
Comment 6 Coacher 2014-04-18 22:34:33 UTC
(In reply to comment #4)
> Git commit 37f3637e9c8fbea5f23d245d77b58b35da88bb41 by Montel Laurent.
> Committed on 18/04/2014 at 17:36.
> Pushed by mlaurent into branch 'KDE/4.13'.
> 
> Bug 333583 - Quick filter button ('More') is not (re)movable
> 
> FIXED-IN: 4.13.1
> 
> M  +10   -3    messagelist/core/quicksearchline.cpp
> M  +2    -0    messagelist/core/quicksearchline.h
> M  +1    -3    messagelist/core/widgetbase.cpp
> M  +49   -0    messagelist/tests/quicksearchlinetest.cpp
> M  +2    -0    messagelist/tests/quicksearchlinetest.h
> 
> http://commits.kde.org/kdepim/37f3637e9c8fbea5f23d245d77b58b35da88bb41

Hmm, I've tried this change on top of vanilla kmail 4.13. Nothing changed, the button is still always there. What's exactly the way to get rid of it?
Comment 7 Coacher 2014-04-18 22:35:52 UTC
(In reply to comment #6)
> Hmm, I've tried this change on top of vanilla kmail 4.13. Nothing changed,
> the button is still always there. What's exactly the way to get rid of it?

By nothing changed I mean it's still unmovable/unremovable.
Comment 8 Laurent Montel 2014-04-19 07:27:18 UTC
So you didn't install correctly patch or you didn't rebuild correctly
I have an unittest which valid it
and I test and it's ok.
Regards
Comment 9 Coacher 2014-04-19 18:49:52 UTC
(In reply to comment #8)
> So you didn't install correctly patch or you didn't rebuild correctly
> I have an unittest which valid it
> and I test and it's ok.
> Regards

Hmm, I am pretty sure I've patched correctly. Does this fix is about kmail itself or it is about some shared lib that kmail uses? Because my distro (Gentoo) splits kmail and common kdepim libs into different packages and I've rebuilt kmail only.

Can you please tell me what is the expected result when this patch is applied properly? `More` button is not there anymore or ...?
Comment 10 Coacher 2014-04-19 20:10:18 UTC
Okay, after applying your patch to the package with common kdepim libs everything is fine, the `More` button is gone now to Quick search bar.

Thanks a lot for your help!