Bug 333583 - Quick filter button ('More') is not (re)movable

FIXED-IN: 4.13.1
BUG: 333583